@@ -479,13 +479,13 @@ Code
 The "code" directive constructs a literal block. If the code language is
 specified, the content is parsed by the Pygments_ syntax highlighter and
 tokens are stored in nested `inline elements`_ with class arguments
-according to their syntactic category. The actual highlighting depends on a
-style-sheet (e.g. one `generated by Pygments`__).
+according to their syntactic category. The actual highlighting can be
+customized with a style-sheet (e.g. one `generated by Pygments`__).
 
 The parsing can be turned off with the syntax_highlight_ configuration
 setting and command line option or by specifying the language as `:class:`_
-option (leaveing the directive argument empty). This also avoids warnings
-when Pygments_ is not installed or the language is not amongst the
+option instead of directive argument. This also avoids warnings
+when Pygments_ is not installed or the language is not in the
 `supported languages and markup formats`_.
 
 __   http://pygments.org/docs/cmdline/#generating-styles
