@@ -858,14 +858,13 @@ numbers:</p>
 <span class="ln">10 </span>    print i
 </pre>
 <p>For inline code snippets, there is the <cite>code</cite> role, which can be used
-directly (the code will not be parsed/tagged, as the language is not
-known) or as base for special code roles, e.g.,</p>
-<!--  -->
-<blockquote>
-Docutils uses LaTeX syntax for math directives and roles:
-<code class="latex tex">\alpha = f(x)</code> prints <span class="math">
+directly (the code will not be parsed/tagged, as the language is not known)
+or as base for special code roles, e.g. the LaTeX code in the next
+paragraph.</p>
+<p>Docutils uses LaTeX syntax for math directives and roles:
+<code class="tex">\alpha = f(x)</code> prints <span class="math">
 \(\alpha = f(x)\)</span>
-.</blockquote>
+.</p>
 <p>The <tt class="docutils literal">:code:</tt> option of the <cite>include</cite> directive sets the included content
 as a code block, here the rst file <tt class="docutils literal">header_footer.txt</tt> with line numbers:</p>
 <pre class="code rst literal-block">
