@@ -8,6 +8,11 @@
 \usepackage{polyglossia}
 \setdefaultlanguage{english}
 \setotherlanguages{british,french,german}
+% basic code highlight:
+\providecommand*\DUrolecomment[1]{\textcolor[rgb]{0.40,0.40,0.40}{#1}}
+\providecommand*\DUroledeleted[1]{\textcolor[rgb]{0.40,0.40,0.40}{#1}}
+\providecommand*\DUrolekeyword[1]{\textbf{#1}}
+\providecommand*\DUrolestring[1]{\textit{#1}}
 \usepackage{color}
 \usepackage{float} % float configuration
 \floatplacement{figure}{H} % place figures here definitely
@@ -1275,17 +1280,12 @@ numbers:
 \end{quote}
 
 For inline code snippets, there is the \DUroletitlereference{code} role, which can be used
-directly (the code will not be parsed/tagged, as the language is not
-known) or as base for special code roles, e.g.,
-
-% 
-%
-\begin{quote}
+directly (the code will not be parsed/tagged, as the language is not known)
+or as base for special code roles, e.g. the LaTeX code in the next
+paragraph.
 
 Docutils uses LaTeX syntax for math directives and roles:
-\texttt{\DUrole{code}{\DUrole{latex}{\DUrole{tex}{\textbackslash{}alpha = f(x)}}}} prints $\alpha = f(x)$.
-
-\end{quote}
+\texttt{\DUrole{code}{\DUrole{tex}{\textbackslash{}alpha = f(x)}}} prints $\alpha = f(x)$.
 
 The \texttt{:code:} option of the \DUroletitlereference{include} directive sets the included content
 as a code block, here the rst file \texttt{header\_footer.txt} with line numbers:
