@@ -25,6 +25,8 @@ Changes Since 0.9.1
   - Fix [3559988] and [3560841] __import__ local writer, reader, languages 
     and parsers for Python 2.7 up.
   - Fix import of PIL.Image.
+  - Change default of "syntax highlight" option to "long", 
+    basic syntax highlight styles for LaTeX and HTML.
 
 * docutils/io.py
 
